update stream function on jury summoning monitor report